# Avalonix

./: .gitignore  App.axaml  App.axaml.cs  Avalonix.csproj  Avalonix.sln  CNAME  Dockerfile  Install.html  LICENSE-MIT  Program.cs  README.md  Readme.md  ViewLocator.cs  about.html  flake.nix  index.html  install.html  main-imgs.css  navigation-panel.css  style.css  uninstall.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: dotnet.yml
API/: DiskManager.cs  Playlist.cs  Track.cs
Models/: DiskManager.cs  Playlist.cs  Settings.cs  Track.cs
Services/: IWindowManager.cs  WindowManager.cs
ViewModels/: IMainWindowViewModel.cs  IPlaylistCreateWindowViewModel.cs  IPlaylistSelectWindowViewModel.cs  MainWindowViewModel.cs  PlaylistCreateWindowViewModel.cs  PlaylistSelectWindowViewModel.cs  ViewModelBase.cs
Views/: MainWindow.axaml  MainWindow.axaml.cs
avalonix/: config.toml
avalonix/src-tauri/avalonix-api/: Cargo.toml
avalonix/src-tauri/avalonix-api/src/: db.rs  disk_manager.rs  hash.rs  lib.rs  logger.rs  media.rs  utils.rs
avalonix/src-tauri/avalonix-api/src/audio/: media_player.rs
avalonix/src-tauri/avalonix-api/src/media/: metadata.rs  track.rs
old/: DiskManager.cs  Playlist.cs  Settings.cs  Track.cs
pages/: about.html  index.html  script.js  style.css
src/: App.axaml  App.axaml.cs  Avalonix.csproj  DiskManager.cs  MainWindow.axaml  MainWindow.axaml.cs  MainWindow.axaml.txt  MediaPlayer.cs  Playlist.cs  PlaylistCreateWindow.axaml  PlaylistCreateWindow.axaml.cs  Program.cs  UpdateVersion.cs  ViewLocator.cs  app.manifest  result  shell.nix
(+94 files in other folders)
