[package]
name = "avalonix-api"
version = "0.1.0"
edition = "2024"

[dependencies]
biquad = "0.5.0"
lofty = "0.23.2"
rand = "0.10.0"
bytecheck = "0.8.2"
colored = "3.1.1"
dirs = "6.0.0"
rkyv = "0.8.15"
rodio = "0.22.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = {version="1.0.99"}
sled = "0.34.7"
uuid = { version = "1.22.0", features = ["v4"] }
glob = "0.3.3"

